--- a/prjEShopping/Views/Home/MemberEdit.cshtml
+++ b/prjEShopping/Views/Home/MemberEdit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>tMember</h4>
         <hr />
@@ -20,7 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.fPwd, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.fPwd, new { htmlAttributes = new { @class = "form-control" ,type="password" } })
+                @Html.EditorFor(model => model.fPwd, new { htmlAttributes = new { @class = "form-control", type = "password" } })
                 @Html.ValidationMessageFor(model => model.fPwd, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -50,9 +50,12 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+@if (ViewBag.Msg != null)
+{
+    <div class="alert alert-success">
+        @ViewBag.Msg
+    </div>
+}
 
 <script src="~/Scripts/jquery-3.3.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
