--- a/prjEShopping/Views/Home/Index.cshtml
+++ b/prjEShopping/Views/Home/Index.cshtml
@@ -57,17 +57,23 @@
         }
 
     </td>
-    <td>
-        <div class="caption">
-            <p> <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">放入購物車</a></p>
-        </div>
-    </td>
+    @if (string.IsNullOrWhiteSpace(User.Identity.Name) == false)
+    {
+<td>
+    <div class="caption">
+        <p>
+            <a href="@Url.Action("ShoppingCar")?fPId=@item.fPId"
+               class="btn btn-success">放入購物車</a>
+        </p>
+    </div>
+</td>
+    }
 
-    @*<td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.fId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.fId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.fId })
-        </td>*@
+@*<td>
+        @Html.ActionLink("Edit", "Edit", new { id=item.fId }) |
+        @Html.ActionLink("Details", "Details", new { id=item.fId }) |
+        @Html.ActionLink("Delete", "Delete", new { id=item.fId })
+    </td>*@
 </tr>
 }
 
